--- a/elvis.config
+++ b/elvis.config
@@ -9,11 +9,12 @@
         filter => "*.erl",
         rules => [
                   {elvis_style, line_length,
-                   #{limit => 80, skip_comments => false}},
+                   #{limit => 90, skip_comments => false}},
                   {elvis_style, invalid_dynamic_call,
-                   #{ignore => [
+                   #{ignore => [smerl
                                ]}},
-                  {elvis_style, god_modules, #{limit => 25}}
+                  {elvis_style, nesting_level, #{level => 4}},
+                  {elvis_style, god_modules, #{limit => 50}}
                  ],
         ruleset => erl_files
        },
