--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 %% -*- mode: erlang -*-
 {erl_opts, [debug_info]}.
-{plugins, [{coveralls, {git, "https://github.com/markusn/coveralls-erl", "master"}}]}.
+{plugins, [{coveralls, "1.3.0"}]}.
 
 {post_hooks, []}.
 
@@ -28,6 +28,4 @@
                        {"./README.md",
                         "https://github.com/deadtrickster/smerl"}}]}]},
             {benchmark, [{src_dirs, ["src", "benchmark"]},
-                         {deps, [{'erlang-color',
-                                  {git, "https://github.com/julianduque/erlang-color",
-                                   {branch, "master"}}}]}]}]}.
+                         {deps, [{erlang_color, "1.0.0"}]}]}]}.
