--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,7 @@
 %% -*- mode: erlang -*-
 {erl_opts, [debug_info]}.
-{plugins, [{coveralls, "1.3.0"}]}.
+{plugins, [{coveralls, "1.3.0"},
+           {rebar3_lint, "0.1.7"}]}.
 
 {post_hooks, []}.
 
