[smerl.erl,scratch.erl] Rearrange/refactor code
- Move private functions to the bottom
- Pull out helper functions and set nesting_level to 3 (close #2)
- Add and use ?IF macro when appropriate
- Add ok_t/1 and and error_t/1 types
- Prefer lists:keyfind/3 to lists:keysearch/3
- Use lists:filtermap/2 and list comprehensions for great good
- Replace undefined with [] in compile/{1,2} and tighten type
- Pull out remaining commented out code into _dev/scratch.erl

--- a/elvis.config
+++ b/elvis.config
@@ -8,12 +8,11 @@
                 ],
         filter => "*.erl",
         rules => [
-                  {elvis_style, line_length,
-                   #{limit => 90, skip_comments => false}},
+                  {elvis_style, line_length, #{limit => 80}},
                   {elvis_style, invalid_dynamic_call,
                    #{ignore => [smerl
                                ]}},
-                  {elvis_style, nesting_level, #{level => 4}},
+                  {elvis_style, nesting_level, #{level => 3}},
                   {elvis_style, god_modules, #{limit => 50}}
                  ],
         ruleset => erl_files
